# malaysia-house-price-estimator

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  config.example.json  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/official/: jpph_historical_average_prices.csv  (+1 more)
docs/: AGGREGATE_TRANSACTION_DATASET.md  ARCHITECTURE_AND_USAGE.md  BLOCKERS.md  CLEANING_AND_VALIDATION.md  DATA_SCHEMA.md  DATA_SOURCE_INVESTIGATION.md  INDIVIDUAL_PROPERTY_DATA_REQUIREMENTS.md  PROJECT_PROGRESS.md  REAL_DATASET_ASSESSMENT.md  REAL_DATA_EDA.md  REAL_DATA_ONBOARDING.md  REAL_MODEL_EVALUATION.md  RECENT_OFFICIAL_DATA_INVESTIGATION.md  STATE_GENERALIZATION.md  STREAMLIT_DEPLOYMENT.md
models/: README.md  demo_bundle.pkl  regional_area_bundle.pkl
reports/: aggregate_transaction_eda.json  official_average_model_metrics.json  regional_area_model_metrics.json
scripts/: download_napic_open_transactions.py  download_napic_publication_tables.py  process_aggregate_transactions.py  process_napic_aggregate_transactions.py  train_aggregate_model.py  train_napic_open_transactions.py  train_official_averages.py  train_penang_district.py  train_regional_area.py  train_regional_terraced.py
tests/: test_aggregate_data.py  test_aggregate_transactions.py  test_artifacts.py  test_cleaning.py  test_framework.py  test_location_catalog.py  test_napic_open_transactions.py  test_official_averages.py  test_penang_district.py  test_real_transactions.py  test_regional_area.py  test_regional_terraced.py  test_ui_contracts.py
(+54 files in other folders)
